--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     
-    <a href="www.google.com">
+    <a href=www.google.com>
         <span></span>
         <span></span>
         <span></span>
